import Foundation

// MARK: - K
// swiftlint: disable type_name
struct K {
// swiftlint: enable type_name

    // MARK: - SoundsNames
    struct SoundsNames {

        static let mainTheme = "BBDBTheme"
    }

    // MARK: - IconsNames
    struct IconsNames {

        static let feed = "feedIcon"
        static let menu = "menuIcon"
        static let favorites = "favoritesIcon"
        static let whoAmI = "whoAmIIcon"
        static let settings = "settingsIcon"
        static let appInfo = "appInfoIcon"
        static let currentScreenInfo = "currentScreenInfoIcon"
        static let info = "infoIcon"
        static let network = "networkIcon"
        static let share = "shareIcon"
        static let placeholder = "placeholderIcon"
    }

    // MARK: - ImagesNames
    struct ImagesNames {

        static let splashLogo = "splashLogo"
        static let noImage = "noImage"
        static let makePhoto = "makePhoto"
        static let choosePhoto = "choosePhoto"
        static let topBun = "topBun"
        static let bottomBun = "bottomBun"
        static let yellowBackground = "yellowBackground"
        static let blueBackground = "blueBackground"
        static let greenBackground = "greenBackground"
        static let redBackground = "redBackground"
        static let grayBackground = "grayBackground"
        static let star = "star"
        static let arrowClockwise = "arrow.clockwise"
        static let chevronRight = "chevron.right"
        static let chevronLeft = "chevron.left"
    }

    // MARK: - CoreDataEntitiesNames
    struct CoreDataEntitiesNames {

        static let cdCharacter = "CDCharacter"
        static let cdEpisode = "CDEpisode"
        static let cdStore = "CDStore"
        static let cdTruck = "CDTruck"
        static let cdCredits = "CDCredits"
        static let cdBurger = "CDBurger"
    }

    // MARK: - Identifiers
    struct Identifiers {

        static let header = "headerCollectionReusableView"
        static let favoriteCell = "favoriteCell"
        static let listCell = "listCell"
        static let listCellWithImage = "listCellWithImage"
    }

    struct AccessibilityIdentifiers {
        static let tabBar = "tabBar"
        static let feedScrollView = "feedScrollView"
        static let feedPageControl = "feedPageControl"
        static let webView = "webView"
        static let charactersButton = "charactersButton"
        static let episodesButton = "episodesButton"
        static let storesButton = "storesButton"
        static let trucksButton = "trucksButton"
        static let creditsButton = "creditsButton"
        static let burgersButton = "burgersButton"
        static let makePhoto = "makePhoto"
        static let choosePhoto = "choosePhoto"
        static let resultPhoto = "resultPhoto"
        static let moduleInfo = "moduleInfo"
        static let appInfo = "appInfo"
        static let clearCacheButton = "clearCacheButton"
        static let soundSwitch = "soundSwitch"
        static let splashSwitch  = "splashSwitch"
        static let volumeSlider = "volumeSlider"
    }
}
